# precc-cc

./: ALTERNATIVES.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cross.toml  README.demo.md  README.md  deploy.toml  generate_cheatsheets.py  precc-cheatsheet-en.pptx  precc-cheatsheet-zh.pptx  precc-pitch-en.pptx  precc-pitch-zh.pptx  precc-pitch.pptx
.claude-plugin/: marketplace.json
.claude-plugin/plugins/precc/: plugin.json
.claude-plugin/plugins/precc/commands/: ccc-savings.md  cluster.md  compress.md  gha.md  savings.md  search.md
.github/: FUNDING.yml
.github/workflows/: build-release.yml  clawhub-publish.yml  release.yml  sync-and-trigger.yml
crates/precc-cli/: Cargo.toml
crates/precc-cli/src/: gif.rs  mail.rs  main.rs  webhook.rs
crates/precc-core/: Cargo.toml  build.rs
crates/precc-core/src/: advisor.rs  agent_propagate.rs  ccc.rs  compress.rs  consent.rs  context.rs  db.rs  diet.rs  gdb.rs  geofence.rs  gha.rs  grep_filter.rs  lean_ctx.rs  lib.rs  license.rs  metrics.rs  mining.rs  mode.rs  mode_selector.rs  multi_probe.rs  nushell.rs  post_observe.rs  promote.rs  read_filter.rs  rtk.rs  session_ring.rs  sharing.rs  skill_advisor.rs  skills.rs  telemetry.rs  update_check.rs
crates/precc-hook/: Cargo.toml
crates/precc-hook/src/: main.rs
crates/precc-learner/: Cargo.toml
crates/precc-learner/src/: main.rs
crates/precc-miner/: Cargo.toml
crates/precc-miner/src/: main.rs
demo/: DEMO_GUIDE.md  PITCH_NARRATIVES.md  demo.sh  session.jsonl
demo/gif/: biz_vc.sh  cto.sh  dev.sh  devrel.sh  tech_vc.sh
docs/book/: book.toml
docs/book/db/: book.db  init.sql  migrate_langs.sql  strings_all_missing.sql  strings_command-reference.sql  strings_compress.sql  strings_email.sql  strings_extracted.sql  strings_faq.sql  strings_geofence.sql  strings_gha.sql  strings_gif.sql  strings_hook-pipeline.sql  strings_installation.sql  strings_intro.sql  strings_license.sql  strings_mining.sql  strings_quickstart.sql  strings_reports.sql  strings_savings.sql  strings_skills.sql  strings_telemetry.sql
docs/book/src/: live-stats.js
docs/book/src/ar/: SUMMARY.md  command-reference.md  compress.md  email.md  faq.md  geofence.md  gha.md  gif.md  hook-pipeline.md  installation.md  introduction.md  languages.md  license.md  mining.md  quickstart.md  reports.md  savings.md  skills.md  telemetry.md
docs/book/src/bo/: SUMMARY.md  command-reference.md  compress.md  email.md  faq.md  gif.md  hook-pipeline.md  installation.md  introduction.md  languages.md  quickstart.md
docs/book/templates/: SUMMARY.md.tpl  command-reference.md.tpl  compress.md.tpl  email.md.tpl  faq.md.tpl  geofence.md.tpl  gha.md.tpl  gif.md.tpl  hook-pipeline.md.tpl  installation.md.tpl  introduction.md.tpl  languages.md.tpl  license.md.tpl  mining.md.tpl  quickstart.md.tpl  reports.md.tpl  savings.md.tpl  skills.md.tpl  telemetry.md.tpl
hooks/: hooks.json
plugins/openclaw/: openclaw.plugin.json
plugins/zeroclaw/: Cargo.toml  SKILL.toml
plugins/zeroclaw/src/: lib.rs
scripts/: build-book.sh  deploy.sh  download-stats.sh  install.ps1  install.sh  measure_campaign.sh  precc-ccc-hook.sh  precc-ccc-savings.sh  precc-ts-compress.js  precc-ts-savings.sh  release.sh  stripe-setup.sh  telemetry-report.sh
skills/builtin/: asciinema-gif.toml  block-comment-cmd.toml  git-wrong-dir.toml  go-wrong-dir.toml  jj-translate.toml  mail-report.toml  python-wrong-dir.toml  rust-check-before-build.toml  rust-doc-cache.toml  rust-test-slice.toml  token-portfolio.toml  warn-identify.toml  warn-reduce.toml  zerowarns.toml
skills/precc/: SKILL.md
tests/: adaptive_selector_test.sh  multi_mode_measurement_test.sh  regression_test.sh  rtk_measurement_test.sh
workers/gumroad-webhook/: worker.js  wrangler.toml
(+488 files in other folders)
