[workspace]
resolver = "2"
members = [
    "crates/precc-core",
    "crates/precc-hook",
    "crates/precc-cli",
    "crates/precc-miner",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
obfstr = "0.4"
clap = { version = "4", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
libc = "0.2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
