[package]
name = "precc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for PRECC: context resolution, skill matching, GDB, DB, mining, metrics"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
toml.workspace = true
rusqlite.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
obfstr.workspace = true
tempfile.workspace = true
ureq.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile.workspace = true
