[package]
name = "precc-learner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon that learns error patterns from Claude Code session logs"

[dependencies]
precc-core = { path = "../precc-core" }
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
obfstr.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
